--- a/src/scss/3.component/_ConfigurationItem.scss
+++ b/src/scss/3.component/_ConfigurationItem.scss
@@ -5,7 +5,28 @@
   align-items: center;
   padding: 1.2rem;
 
-  .configuration_item-title {
+  &_title_container {
+    flex: 1;
+    display: flex;
+    align-items: center;
+
+    &-title {
+      margin: 0;
+      margin-right: .5rem;
+    }
+    &-hint {
+    }
+  }
+}
+
+.configuration_input {
+  border: 0.2rem solid rgba(145, 158, 171, 0.5);
+  border-radius: 1rem;
+  display: flex;
+  align-items: center;
+  padding: 0.5rem 1.2rem;
+
+  .configuration_input-title {
     margin: 0;
     flex: 1;
   }
