--- a/src/scss/6.theme/all-color/_blue.scss
+++ b/src/scss/6.theme/all-color/_blue.scss
@@ -218,4 +218,42 @@
     &_DataContainer {
     }
   }
+
+  //Stepper
+  .ant-steps-item-process > .ant-steps-item-container > .ant-steps-item-icon,
+  .ant-steps-item-finish
+    > .ant-steps-item-container
+    > .ant-steps-item-content
+    > .ant-steps-item-title::after {
+    background-color: $color-1;
+  }
+  .ant-steps-item-process .ant-steps-item-icon,
+  .ant-steps
+    .ant-steps-item:not(.ant-steps-item-active):not(.ant-steps-item-process)
+    > .ant-steps-item-container[role="button"]:hover
+    .ant-steps-item-icon,
+  .ant-steps-item-finish .ant-steps-item-icon {
+    border-color: $color-1;
+  }
+
+  .ant-steps
+    .ant-steps-item:not(.ant-steps-item-active):not(.ant-steps-item-process)
+    > .ant-steps-item-container[role="button"]:hover
+    .ant-steps-item-icon
+    .ant-steps-icon,
+  .ant-steps-item-finish .ant-steps-item-icon > .ant-steps-icon,
+  .ant-steps
+    .ant-steps-item:not(.ant-steps-item-active)
+    > .ant-steps-item-container[role="button"]:hover
+    .ant-steps-item-title,
+  .ant-steps
+    .ant-steps-item:not(.ant-steps-item-active)
+    > .ant-steps-item-container[role="button"]:hover
+    .ant-steps-item-subtitle,
+  .ant-steps
+    .ant-steps-item:not(.ant-steps-item-active)
+    > .ant-steps-item-container[role="button"]:hover
+    .ant-steps-item-description {
+    color: $color-1;
+  }
 }
