--- a/src/scss/3.component/_mainHeader.scss
+++ b/src/scss/3.component/_mainHeader.scss
@@ -232,7 +232,11 @@
 
   &-header {
     display: flex;
-    padding: 0.2rem 2rem;
+    padding: 0.2rem 1rem;
+  }
+  
+  &-footer {
+    padding: 0.2rem 1rem;
   }
 }
 
