--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -111,7 +111,7 @@
 .source_type_divider{
   display: flex;
   align-items: center;
-  justify-content: center;
+  // justify-content: center;
   
   h1.ant-typography{
     margin-bottom: .5rem;
