--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -1382,7 +1382,11 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 0.2rem 2rem;
+  padding: 0.2rem 1rem;
+}
+
+.WorkSpace-footer {
+  padding: 0.2rem 1rem;
 }
 
 .expanded-header.mainheader {
@@ -2112,13 +2116,16 @@ body {
 }
 
 .DropDownMenuItem {
-  padding: 0.5rem 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin: 1rem 1.5rem;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .DropDownMenuItem-title {
@@ -4878,9 +4885,6 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
 
 .source_type_divider h1.ant-typography {
