--- a/src/scss/5.pages/_QuickSetup.scss
+++ b/src/scss/5.pages/_QuickSetup.scss
@@ -13,3 +13,27 @@
     }
   }
 }
+
+.QuickSetup {
+  &_UserSuggestion {
+    position: relative;
+
+    &_ListContainer {
+      position: absolute;
+      width: 100%;
+      margin-top: 1rem;
+      z-index: 10;
+      border-radius: 1rem;
+
+      .ant-card-body{
+        padding: 1rem;
+      }
+    }
+
+    &_ListItem {
+      display: flex;
+      align-items: center;
+      margin: 1rem;
+    }
+  }
+}
