--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,6 +20,7 @@
 @import "./3.component/ConfigurationItem";
 @import "./3.component/InfoBox";
 @import "./3.component/SourceSelectionItem";
+@import './3.component/SearchItemNew';
 
 @import "./5.pages/home";
 @import "./5.pages/login";
