--- a/src/scss/3.component/_mainHeader.scss
+++ b/src/scss/3.component/_mainHeader.scss
@@ -1,12 +1,13 @@
 .mainheader {
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  // background-position: center center;
+  // background-repeat: no-repeat;
+  // background-size: cover;
   position: fixed;
   z-index: 1;
   width: 100%;
   height: 9rem;
   transition: all 0.1s ease-in;
+  
 
   &::after {
     content: "";
@@ -54,6 +55,7 @@
         justify-content: flex-end;
         align-items: center;
         flex: 1;
+        
 
         &-fullscreen {
           margin: 0 2rem;
@@ -71,6 +73,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            
           }
 
           &-text {
@@ -228,6 +231,7 @@
     align-items: center;
     justify-content: center;
     color: $color-white;
+    cursor: pointer;
   }
 
   &-header {
@@ -243,7 +247,7 @@
 .expanded-header {
   &.mainheader {
     position: absolute;
-    height: 24rem;
+    // height: 24rem;
   }
 }
 
@@ -253,7 +257,7 @@
       &_navbar {
         align-items: flex-start;
         &_searchcontainer {
-          margin-top: 8rem;
+          margin-top: 0rem;
 
           &-title {
             opacity: 1;
@@ -261,6 +265,102 @@
             margin-bottom: 2.2rem !important;
           }
         }
+      }
+    }
+  }
+}
+.mainheader_container_navbar_searchcontainer_actionBox{
+  border-radius: 10rem;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  left: 0;
+  margin-right: 0;
+  height: inherit;
+  gap: 3px;
+}
+.mainheader_container_navbar_searchcontainer{
+  display: flex;
+  flex-direction: row;
+  padding-right: 10px;
+  border-radius: 10rem !important;
+  gap: 1rem;
+  width: 50vw;
+}
+
+.mainheader_container_navbar_searchcontainer_inputBox-input{
+  border: none !important;
+  box-shadow: none !important;
+  border-top-right-radius: 0rem !important;
+  border-bottom-right-radius: 0rem !important;
+  border-top-left-radius: 10rem !important;
+  border-bottom-left-radius: 10rem !important;
+  padding-left: 1rem;
+  box-sizing: content-box !important;
+  margin-left: -1px !important;
+  display: block !important;
+}
+.mainheader_container_body_section{
+  display: flex;
+  height: 100vh;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+.mainheader_searchlist_container-scrollContainer{
+  cursor: pointer;
+}
+
+
+.dark {
+  &.blue {
+    .mainheader_container_navbar_searchcontainer{
+      background-color: $darkBg;
+      box-shadow: 0px 0px 3px 2px rgba($color: $DarkBlue-extracolor3, $alpha: 0.2);
+    }
+  }
+}
+.light {
+  &.blue {
+    .mainheader_container_navbar_searchcontainer{
+      background-color: #D6E4E5; 
+      box-shadow: 0px 0px 3px 2px rgba($color: $DarkBlue-primary, $alpha: 0.2);
+    }
+  }
+}
+.microphone_section{
+  width: fit-content;
+  height: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 4rem;
+  padding: 0.4rem;
+  border-radius: 50%;
+  margin-left: 1rem;
+  cursor: pointer;
+  transition: all 0.4s ;
+}
+.dark {
+  &.blue {
+    .microphone_section{
+      background-color: $darkBg;
+      color: white;
+      box-shadow: 0px 0px 1px 1px rgba($color: $DarkBlue-extracolor3, $alpha: 0.1);
+      &:hover{
+        box-shadow: 0px 0px 3px 2px rgba($color: $DarkBlue-extracolor3, $alpha: 0.3);
+      }
+    }
+  }
+}
+.light {
+  &.blue {
+    .microphone_section{
+      background-color: #D6E4E5; 
+      box-shadow: 0px 0px 1px 1px rgba($color: $DarkBlue-primary, $alpha: 0.1);
+      color: $DarkBlue-primary;
+      &:hover{
+        box-shadow: 0px 0px 3px 2px rgba($color: $DarkBlue-primary, $alpha: 0.3);
       }
     }
   }
