login signup ui completed

--- a/src/scss/1.abstract/_variable.scss
+++ b/src/scss/1.abstract/_variable.scss
@@ -121,3 +121,19 @@ $color-11: #000000;
 
 $color-white: #ffffff;
 $color-black: #000000;
+
+// color Pallete for new Theme
+$light_primary_background_color1: #47B9EE;
+$light_primary_white_color1: #FEFFFF;
+$light_primary_grey_color1: #ECECEC;
+
+// border readius
+$xs_small_radius: 0.2rem;
+$small_radius: 0.5rem;
+$medium_radius: 0.8rem;
+$large_radius: 1rem;
+$xl_radus: 1.5rem;
+
+// colors
+$cyan: #00FFFF;
+$infosys_logo: #007CC3;
