--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,6 +25,7 @@
 @import "./5.pages/home";
 @import "./5.pages/login";
 @import "./5.pages/QuickSetup";
+@import "./5.pages/auth";
 
 @import "./7.vendors/ant-divider";
 @import "./7.vendors/checkbox";
