--- a/src/scss/5.pages/_auth.scss
+++ b/src/scss/5.pages/_auth.scss
@@ -46,7 +46,7 @@
         }
         .inputButton{
             border-radius: $small_radius;
-            border-color: $infosys_logo;
+            border-color: $light_primary_background_color1;
             height: 3.7rem;
         }
         .signupContainer{
