--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -2031,7 +2031,7 @@ body {
 }
 .auth_page .auth_right_section .inputButton {
   border-radius: 0.5rem;
-  border-color: #007CC3;
+  border-color: #47B9EE;
   height: 3.7rem;
 }
 .auth_page .auth_right_section .signupContainer {
