--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -1197,6 +1197,7 @@ body {
   padding: 0.4rem;
   border-radius: 50%;
   margin-left: 1rem;
+  pointer-events: auto;
   cursor: pointer;
   transition: all 0.4s;
 }
